cuerpo casi completo - agregando espacios

--- a/Principal_Home.html
+++ b/Principal_Home.html
@@ -8,7 +8,9 @@
 <body>
     <div style="background-image: url('Muyuna-lodge-Iquitos.jpg'); width: 200vh; height: 100vh;">
         <h1 style="color: white;">Iquitos</h1>
+        <div style="height: 25px;"></div>
         <h3 style="color: white;">Descubra maravillas ocultas y destinos inspiradores en iquitos</h3>
+        <div style="height: 25px;"></div>
         <button type="button" class="btn btn-light">Comprar</button>
     </div>
 </body>
